homevent (0.2.7) stable; urgency=low

  * Onwards.

 -- Matthias Urlichs <matthias@urlichs.de>  Sat, 05 Jan 2008 10:59:57 +0100

homevent (0.2.6) stable; urgency=low

  * Add a flag to force reporting Python stack traces
    … including a traceback on the code reporting the error.
  * Make sure event handlers match on numbers.
  * Add "less" and "greater" checks in addition to "equal".
  * Fix context concatenation order
    event parameters picked up values from their caller
    instead of their own parameters
  * Logging for subsystems (like "onewire", for which I need it)
  * Support the 1wire/AAG wind vane
  * Show details on 1wire devices.
  * Send and receive "raw" FS20 data.
  * Support FS20 switches.
  * Fix stderr/stdout logging when starting HomEvenT
    via the Debian init script.
  * Implemented PortAudio interface.
  * Implement precise-interval "every N seconds" wait statements.
    … and export the timestamp as $wait.
  * Timer handling while testing is now deterministic
    so no more false negatives. Hopefully.
  * Allow net connections to use a multi-word name.
    Also renamed "disconnect net" to "del net"
    and "connect net" to just "net".

 -- Matthias Urlichs <matthias@urlichs.de>  Sat, 05 Jan 2008 10:58:16 +0100

homevent (0.2.5.6) stable; urgency=low

  * Class name nonsense.

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 03 Dec 2007 23:24:10 +0100

homevent (0.2.5) unstable; urgency=low

  * Added "delta up" to monitor, denoting a counter that doesn't go down
    (if that happens, the delta will be ignored but the counter will still
     be used)
  * Added conditional events

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 03 Dec 2007 06:43:50 +0100

homevent (0.2.4) unstable; urgency=low

  * Fixed packaging.
  * Handle "busy" responses from the OWFS server.
  * Handle OWFS timeouts in non-DIR messages.
  * Use cached version of OWFS for directory scans.
  * Run as a "homevent" user (Debian packaging)