@@ -21,11 +21,68 @@
 typedef void FLOW;
 #endif
 
-FLOW *flow_setup(unsigned int rate,
-	unsigned short _low, unsigned short _l, unsigned short _mid, unsigned short _h, unsigned short _high);
+/* constants for parity */
+#define P_NONE 0
+#define P_ODD 1
+#define P_EVEN 2
+#define P_SPACE 4
+#define P_MARK 5
+
+/* Initialize the data structure.
+ *
+ * Rate is in bits/second. maxlen is the max number of bytes in a
+ * datagram. Bits/byte must obviously be >=1 and <=8. "msb" is set if
+ * the most-significant bit shall be transmitted/received first.
+ *
+ * You can get mostly-raw access to the data stream by setting bits=1
+ * and parity=P_NONE. ("Mostly", because sync bits are still handled
+ * internally.)
+ *
+ * Byte parity is handled by this code; everything else is the job of
+ * the application.
+ */
+FLOW *flow_setup(unsigned int rate, unsigned int maxlen,
+                 unsigned char bits, unsigned char parity,
+                 unsigned char msb);
+
 void flow_free(FLOW *);
 
-/* read */
+
+/*********** reading ***********/
+
+/* Access constants for the timeout buffer. It's initialized like this:
+
+	unsigned int len[R_IDLE+1] = {
+		[R_MIN+R_ZERO+R_MARK] = 123,
+		[R_MAX+R_ZERO+R_MARK] = 234,
+		[...]
+		[R_IDLE] = 9999
+	};
+	flow_setup_reader(f, ..., len)
+
+ * R_IDLE is the max time a signal can be present (or not) before
+ * concluding that the datagram is over. It takes precedence over
+ * all other timing values.
+ * Both MARK (transmitter on) and SPACE (transmitter off) timings are
+ * checked. Both need to be within range. Ranges may overlap. The
+ * datagram is also considered to be over when a bit value cannot be
+ * determined to be either ZERO or ONE.
+ *
+ * All times are in microseconds.
+ */
+#define R_MIN 0
+#define R_MAX 4
+
+#define R_ZERO 0
+#define R_ONE 2
+
+#define R_MARK 0
+#define R_SPACE 1
+
+#define R_IDLE 8 /* must be last */
+
+void flow_setup_reader(FLOW *flow, unsigned int nsync, unsigned int len[R_IDLE+1]);
+
 typedef void(*flow_readproc)(void *param, const unsigned char *buf, unsigned int len);
 
 void flow_reader(FLOW *flow, flow_readproc proc, void *param);
@@ -34,7 +91,20 @@ void flow_read_buf(FLOW *flow, const unsigned char *buf, unsigned int len);
 void flow_report(FLOW *flow, unsigned short low, unsigned short high, unsigned short minlen);
 int flow_read_logging(FLOW *flow);
 
-/* write */
+/*********** write ***********/
+
+/* offsets for timing. See read side for explanation, except that we
+ * have a fixed time and no min/max :-) */
+#define W_MARK 0
+#define W_SPACE 2
+
+#define W_ZERO 0
+#define W_ONE 1
+
+#define W_IDLE 4 /* must be last */
+
+void flow_setup_writer(FLOW *flow, unsigned int nsync, unsigned int len[W_IDLE+1]);
+
 typedef int(*flow_writeproc)(void *param, unsigned char *buf, unsigned int len);
 
 void flow_writer(FLOW *flow, flow_writeproc proc, void *param, int blocking);
